--- a/api/vercel.json
+++ b/api/vercel.json
@@ -8,6 +8,11 @@
           "includeFiles": [
             "dist/**/*",
             "node_modules/**/*"
+          ],
+          "excludeFiles": [
+            "src/**/*",
+            "tests/**/*",
+            "scripts/**/*"
           ]
         }
       }
