--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.14.0",
     "argon2": "^0.40.3",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
