--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
