--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/swagger": "^7.3.1",
@@ -42,26 +43,38 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.2.0",
     "compression": "^1.7.4",
+    "dayjs": "^1.11.13",
     "dotenv-cli": "^7.4.2",
     "drizzle-orm": "^0.32.0",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
+    "jwt-simple": "^0.5.6",
     "minio": "^8.0.0",
+    "nodemailer": "^6.9.15",
     "pactum": "^3.7.0",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "streamifier": "^0.1.1"
+    "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "drizzle-kit": "^0.23.0",
