--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/main.js",
+      "src": "dist/src/main.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)", 
-      "dest": "src/main.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+      "src": "/(.*)",
+      "dest": "dist/src/main.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
     }
   ]
 }
